<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.oxycblt.auxio.ui.ButtonGroupToolbar
        android:id="@+id/playback_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar_playback"
        app:navigationIcon="@drawable/ic_down_24"
        app:subtitleCentered="true"
        app:subtitleTextAppearance="?attr/textAppearanceBodySmall"
        app:title="@string/lbl_playback"
        app:titleCentered="true"
        app:titleTextAppearance="?attr/textAppearanceLabelLargeEmphasized"
        tools:subtitle="@string/lbl_all_songs" />

    <!-- Artwork: columna izquierda, cuadrado, r:14dp -->
    <org.oxycblt.auxio.playback.ui.ControlledCoverView
        android:id="@+id/playback_cover"
        style="@style/Widget.Fluxio.Image.Full"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginBottom="@dimen/spacing_sm"
        app:enablePlaybackIndicator="false"
        app:enableSelectionBadge="false"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playback_toolbar" />

    <!-- Info: título + corazón + artista, al lado del artwork -->
    <LinearLayout
        android:id="@+id/playback_info_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_sm"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/playback_controls_wrapper"
        app:layout_constraintEnd_toStartOf="@+id/playback_more"
        app:layout_constraintStart_toEndOf="@+id/playback_cover"
        app:layout_constraintTop_toTopOf="@+id/playback_cover"
        app:layout_constraintVertical_chainStyle="packed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/playback_song"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?android:attr/textColorPrimary"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="Song Name" />

            <org.oxycblt.auxio.ui.RippleFixMaterialButton
                android:id="@+id/playback_favorite"
                style="@style/Widget.Fluxio.Button.Playback.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                app:icon="@drawable/ic_add_24"
                app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Xsmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/playback_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="?android:attr/textColorSecondary"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="Artist Name" />

    </LinearLayout>

    <!-- Botón de overflow, anclado a la esquina derecha del bloque de info -->
    <org.oxycblt.auxio.ui.RippleFixMaterialButton
        android:id="@+id/playback_more"
        style="@style/Widget.Fluxio.Button.Playback.More"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_sm"
        app:icon="@drawable/ic_more_24"
        app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Small"
        app:layout_constraintBottom_toBottomOf="@+id/playback_info_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playback_info_container" />

    <!-- Controles: fila única con los 5 botones (compacto) -->
    <org.oxycblt.auxio.playback.ui.ForcedLTRFrameLayout
        android:id="@+id/playback_controls_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_sm"
        app:layout_constraintBottom_toBottomOf="@+id/playback_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playback_cover"
        app:layout_constraintTop_toBottomOf="@+id/playback_info_container">

        <com.google.android.material.button.MaterialButtonGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spacing="@dimen/spacing_tiny">

            <org.oxycblt.auxio.ui.WidthFixMaterialButton
                android:id="@+id/playback_repeat"
                style="@style/Widget.Fluxio.Button.Playback.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_change_repeat"
                app:icon="@drawable/ic_repeat_off_24"
                app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Xsmall" />

            <org.oxycblt.auxio.ui.RippleFixMaterialButton
                android:id="@+id/playback_skip_prev"
                style="@style/Widget.Fluxio.Button.Playback.Skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_skip_prev"
                app:icon="@drawable/ic_skip_prev_24"
                app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Small.Narrow" />

            <org.oxycblt.auxio.ui.RippleFixMaterialButton
                android:id="@+id/playback_play_pause"
                style="@style/Widget.Fluxio.Button.Playback.PlayPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_tiny"
                android:contentDescription="@string/desc_play_pause"
                app:icon="@drawable/sel_playing_state_24"
                app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Small"
                tools:icon="@drawable/ic_play_24" />

            <org.oxycblt.auxio.ui.RippleFixMaterialButton
                android:id="@+id/playback_skip_next"
                style="@style/Widget.Fluxio.Button.Playback.Skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_skip_next"
                app:icon="@drawable/ic_skip_next_24"
                app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Small.Narrow" />

            <org.oxycblt.auxio.ui.RippleFixMaterialButton
                android:id="@+id/playback_shuffle"
                style="@style/Widget.Fluxio.Button.Playback.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_shuffle"
                app:icon="@drawable/sel_shuffle_state_24"
                app:tint="@color/sel_activatable_icon"
                app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Xsmall" />

        </com.google.android.material.button.MaterialButtonGroup>

    </org.oxycblt.auxio.playback.ui.ForcedLTRFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
